test/conformance/kuttl/policy-validation/cluster-policy/policy-exceptions-disabled/01-policy_exception.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- policy_exception.yaml
assert:
- policy_exception-assert.yaml
