test/conformance/kuttl/policy-validation/cluster-policy/policy-exceptions-disabled/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource.yaml
  shouldFail: true
