test/conformance/kuttl/policy-validation/cluster-policy/policy-exceptions-disabled/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-app-label
      match:
        resources:
          kinds:
            - Pod
      # exclude:
      #   resources:
      #     selector:
      #       matchLabels:
      #         app: my-test-app
      validate:
        message: Pod must include the 'app=my-app' label
        pattern:
          metadata:
            labels:
              app: my-app
