test/conformance/kuttl/policy-validation/cluster-policy/policy-exceptions-disabled/policy_exception-assert.yaml
apiVersion: kyverno.io/v1
kind: PolicyException
metadata:
  name: label-exception
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
